# defect-detection-FPGA-contest

./: README.md
CapsuleCheck_v2/: CMakeLists.txt  Readme.txt
CapsuleCheck_v2/src/: detect.ipynb  main.cpp
